--- a/login.css
+++ b/login.css
@@ -1,6 +1,6 @@
-body {
+body { 
     font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(45deg, rgb(13, 254, 0), rgb(141, 10, 178));
+    background-image: linear-gradient(45deg, rgb(223, 22, 49), rgba(65, 17, 25, 0.832));
     height: 100vh;
     margin: 0;
     display: flex;
@@ -10,18 +10,17 @@ body {
 
 .login {
     background-color: white;
-    padding: 60px 40px;
+    padding: 30px 30px;
     border-radius: 25px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 15px rgba(234, 18, 47, 0.975);
     width: 100%;
     max-width: 400px;
     text-align: center;
 }
 
-
 .login h1 {
-    color: #333;
-    margin-bottom: 30px;
+    color: rgb(39, 12, 12)
+    margin-bottom: 40px;
 }
 
 .text {
@@ -36,22 +35,24 @@ body {
 }
 
 .text:focus {
-    border-color: #8e2de2;
+    border-color: #e22d2d;
     outline: none;
-    box-shadow: 0 0 8px rgba(141, 10, 178, 0.4);
+    box-shadow: 0 0 8px rgb(218, 22, 38);
 }
 
 button {
-    padding: 12px 25px;
+    padding: 12px 30px;
     font-size: 16px;
-    background-color: #8e2de2;
+    background-color: #e22d2d;
     color: white;
     border: none;
-    border-radius: 10px;
+    border-radius: 100px; 
+    width: 50%;
     cursor: pointer;
-    transition: background 0.3s;
+    transition: background 0.3s, transform 0.2s;
 }
 
 button:hover {
-    background-color: #6b1aaf;
+    background-color: #852222;
+    transform: scale(1.03);
 }
